--- a/dashboard.html
+++ b/dashboard.html
@@ -34,13 +34,12 @@
         <div class="carousel-item">
           <img src="playthrough.jpg" class="d-block w-100" alt="Gambar 3">
         </div>
-      </div>
-      <!-- Controls -->
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      </div>      
+      <a class="carousel-control-prev" href="" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
